--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     left: 0;
     z-index: 10;
     display: none;
-    /* фон затемнения */
     background-color: rgba(0, 0, 0, 0.65);
     position: fixed;
     cursor: default;
@@ -22,7 +21,7 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    opacity: 0;
+    opacity: 0;//
     visibility: hidden;
     font-size: 14px;
     z-index: 20;
@@ -33,11 +32,6 @@
 
 }
 
-.background:target + .block {
-    opacity: 1;
-    visibility: visible;
-
-}
 
 .buttonOne {
     position: absolute;
